// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Home page:  should render Home page with success register message 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="home"
        data-testid="home"
      >
        <div
          class="home__content"
        >
          <a
            class="home__link active"
            href="/"
          >
            Main
          </a>
          <a
            class="home__link"
            href="/login"
          >
            Login
          </a>
          <a
            class="home__link"
            href="/register"
          >
            Register
          </a>
          <a
            class="home__link"
            href="/cart"
          >
            Cart
          </a>
        </div>
        <div
          class="message"
        >
          <span>
            Hello and welcome!ヾ(☆▽☆)
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="home"
      data-testid="home"
    >
      <div
        class="home__content"
      >
        <a
          class="home__link active"
          href="/"
        >
          Main
        </a>
        <a
          class="home__link"
          href="/login"
        >
          Login
        </a>
        <a
          class="home__link"
          href="/register"
        >
          Register
        </a>
        <a
          class="home__link"
          href="/cart"
        >
          Cart
        </a>
      </div>
      <div
        class="message"
      >
        <span>
          Hello and welcome!ヾ(☆▽☆)
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Home page:  should render Home page without success register message 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="home"
        data-testid="home"
      >
        <div
          class="home__content"
        >
          <a
            class="home__link active"
            href="/"
          >
            Main
          </a>
          <a
            class="home__link"
            href="/login"
          >
            Login
          </a>
          <a
            class="home__link"
            href="/register"
          >
            Register
          </a>
          <a
            class="home__link"
            href="/cart"
          >
            Cart
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="home"
      data-testid="home"
    >
      <div
        class="home__content"
      >
        <a
          class="home__link active"
          href="/"
        >
          Main
        </a>
        <a
          class="home__link"
          href="/login"
        >
          Login
        </a>
        <a
          class="home__link"
          href="/register"
        >
          Register
        </a>
        <a
          class="home__link"
          href="/cart"
        >
          Cart
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
